# minecraft_vibed_edition

./: .claude  Cargo.toml  README.md  editor.py  print_files.py
src/: app.rs  block.rs  blocks.json  camera.rs  crafting.json  items.json  loading.rs  loading.wgsl  main.rs  menu.rs  models.rs  save.rs  shader.wgsl  state.rs  ui.rs  ui.wgsl  vertex.rs  world.rs
