[package]
name = "minecraft_vibed_edition"
version = "0.0.4"
edition = "2024"

[dependencies]
winit = "0.30"
wgpu = "23.0"
glam = "0.29"
bytemuck = { version = "1.14", features = ["derive"] }
pollster = "0.4"
noise = "0.9"
image = "0.25"
glyphon = "0.7"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
bincode = "1.3"
flate2 = "1.0"
chrono = "0.4"
